// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdfCDU sc-gsTDqH dIrhWV fTjNcL"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdfCDU sc-gsTDqH dIlspm fTjNcL"
>
  foo
</button>
`;
